--- a/templates/edit.html
+++ b/templates/edit.html
@@ -24,4 +24,10 @@
 	<input name = "price" value = '{{ product.price }}'>
 	<button class="btn btn-primary btn-sm" type = "submit">Change</button>
 </form>
+<br>
+<br>
+<form action="/">
+	<button class="btn btn-primary btn-sm" type= "submit">Home</button>
+</form>
+
 {% endblock %}
